<resources>
    <string name="app_name">Test PT Pitjarus</string>
    <string name="main_menu">Main Menu</string>
    <string name="keep_username">Keep Username</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="check_update">Check Update</string>
    <string name="mitha_khairulnisa">Mitha Khairulnisa</string>
    <string name="role">Role : {…}</string>
    <string name="_150">150</string>
    <string name="actual_score">Actual Score</string>
    <string name="percentage">Percentage</string>
    <string name="total_score">Total Score</string>
    <string name="kunjungan_pada_bulan_agustus_2020">Kunjungan pada bulan agustus 2020</string>
    <string name="nik_md0001">NIK : MD0001</string>
    <string name="menu">Menu</string>
    <string name="ic_store">ic store</string>
    <string name="ic_target">ic target</string>
    <string name="ic_dashboard">ic dashboard</string>
    <string name="ic_transmition">ic transmition</string>
    <string name="ic_logout">ic logout</string>
    <string name="ic_grid_item">ic grid item</string>
    <string name="no_visit">No Visit</string>
    <string name="visit">Visit</string>
    <string name="indomaret">indomaret</string>
    <string name="myloc_image_button">myloc image button</string>
    <string name="photo_img_button">photo img button</string>
    <string name="lokasi_belum_sesuai">Lokasi belum sesuai</string>
    <string name="ic_location">ic location</string>
    <string name="reset">Reset</string>
    <string name="jalan_pal_merah_no_25_jakarta_barat">Jalan Pal Merah No. 25 Jakarta Barat</string>
    <string name="double_dot">:</string>
    <string name="tipe_outlet">Tipe Outlet</string>
    <string name="data">{data}</string>
    <string name="tipe_display">Tipe Display</string>
    <string name="sub_tipe_display">Sub Tipe Display</string>
    <string name="ya">Ya</string>
    <string name="ertm">ERTM</string>
    <string name="pareto">Pareto</string>
    <string name="e_merchandising">E Merchandising</string>
    <string name="last_visit">Last Visit</string>
    <string name="toko_b">Toko B</string>
    <string name="ic_notes">ic notes</string>
    <string name="dummy_date">05-09-2018</string>
    <string name="user_a">user A</string>
    <string name="refresh">Refresh</string>
    <string name="terimakasih_untuk_support_yang_luar_biasa_di_masa_masa_covid_19_seperti_ini_semoga_selalu_diberkahi">Terimakasih untuk support yang luar biasa di masa-masa covid-19 seperti ini. Semoga selalu diberkahi.</string>
    <string name="st0001">ST0001</string>
    <string name="indomaret_komsen">Indomaret Komsen</string>
    <string name="cluster_small">Cluster : Small</string>
    <string name="tt_reguler_ertm_big_pareto">TT Reguler - ERTM Big - Pareto</string>
    <string name="btn_information">btn information</string>
    <string name="btn_produk_check">btn produk check</string>
    <string name="btn_sku_promo">btn sku promo</string>
    <string name="btn_ringkasan">btn ringkasan</string>
    <string name="information">Information</string>
    <string name="product_check">Product Check</string>
    <string name="sku_promo">SKU Promo</string>
    <string name="ringkasan_oos">Ringkasan OOS</string>
    <string name="store_invesment">Store Invesment</string>
    <string name="ringkasan_oos">Ringkasan OOS</string>
</resources>